add more kafka/quarkus samples