@@ -44,10 +44,10 @@
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
-                        <!--                        <compilerArgs>-->
-                        <!--                            <arg>&#45;&#45;enable-preview</arg>-->
-                        <!--                        </compilerArgs>-->
-                        <!--                        <jvmArgs>&#45;&#45;enable-preview</jvmArgs>-->
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
+                        <jvmArgs>--enable-preview</jvmArgs>
                     </configuration>
                     <executions>
                         <execution>
